# ConnectHub

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup_commands.rs  group_commands.rs  host_commands.rs  identity_commands.rs  key_commands.rs  local_fs_commands.rs  mod.rs  session_commands.rs  sftp_commands.rs  snippet_commands.rs  stats_commands.rs  tunnel_commands.rs  vault_commands.rs  vpn_commands.rs
src-tauri/src/data/: google_auth.rs  groups.rs  host_csv.rs  hosts.rs  identities.rs  mod.rs  snippets.rs  ssh_keys.rs  vpn_profiles.rs
src-tauri/src/google/: drive.rs  mod.rs  oauth.rs
src-tauri/src/models/: group.rs  host.rs  identity.rs  mod.rs  snippet.rs  ssh_key.rs  vpn_profile.rs
src-tauri/src/ssh/: exec.rs  known_hosts.rs  mod.rs  session.rs  sftp.rs  stats.rs  test_support.rs  tunnel.rs
src-tauri/src/vault/: crypto.rs  kdf.rs  mod.rs  store.rs
src-tauri/src/vpn/: mod.rs  setup.rs
src/components/common/: HostCard.tsx  Modal.tsx  ResizeHandle.tsx  hostIcons.tsx  navIcons.tsx  useConfirm.tsx  usePrompt.tsx
src/components/forms/: GroupForm.tsx  HostForm.tsx  IdentityForm.tsx  KeyForm.tsx  RequiredMark.tsx  RunSnippetForm.tsx  SnippetForm.tsx  TunnelForm.tsx  VpnProfileForm.tsx  formStyles.ts
src/components/layout/: ActivityBar.tsx
src/components/panels/: BackupPanel.tsx  GoogleBackupSection.tsx  HostContextPanel.tsx  HostDetail.tsx  IdentitiesPanel.tsx  KeysPanel.tsx  SettingsPanel.tsx  SnippetsDrawer.tsx  SnippetsPanel.tsx  TunnelsPanel.tsx  VpnPanel.tsx
src/components/sftp/: SftpBrowser.tsx
src/components/sidebar/: HostTree.tsx
src/components/terminal/: TerminalView.tsx
src/lib/: constants.ts  friendlyError.ts  groupTree.ts
src/lib/tauri-bridge/: app.ts  backup.ts  groups.ts  hosts.ts  identities.ts  index.ts  keys.ts  localFs.ts  session.ts  sftp.ts  snippets.ts  stats.ts  tunnels.ts  types.ts  vault.ts  vpn.ts
src/pages/: AppShell.tsx  VaultUnlock.tsx
src/state/: commandHistoryStore.ts  hostsStore.ts  sessionsStore.ts  settingsStore.ts  snippetsStore.ts  tunnelsStore.ts  vpnStore.ts
