[package]
name = "sshtool"
version = "0.1.0"
description = "A self-hosted SSH client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sshtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "alloc", "std", "encryption"] }
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
russh = "0.45"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
dashmap = "6"
russh-sftp = "2"
fast-socks5 = "0.10"
futures = "0.3"

