[package]
name = "connecthub"
version = "1.1.1"
description = "Modern cross-platform SSH client with SSH, SFTP, SCP, per-host VPN, and workspace management."
authors = ["ConnectHub Contributors"]
license = "MIT"
repository = "https://github.com/connecthub-client/ConnectHub"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "connecthub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "uuid", "backup"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dirs = "5"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "alloc", "std", "encryption"] }
rsa = "0.9"
rand_core = "0.6"
chrono = { version = "0.4", features = ["serde"] }
russh = "0.45"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
base64 = "0.22"
dashmap = "6"
russh-sftp = "2"
futures = "0.3"
csv = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
sha2 = "0.10"
urlencoding = "2"

